# toy_reflection

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/fetch/: catch2.cmake  spdlog.cmake
include/tmplib/: platform.h  tmp_lib.h
src/: CMakeLists.txt  tmp_lib.cpp
src/utils/: logger.h
test/: CMakeLists.txt  test_context.h  test_tmp_lib.cpp
